--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "vitest --passWithNoTests"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "1.9.7",
-    "axios": "1.5.1",
+    "@reduxjs/toolkit": "2.2.1",
+    "axios": "^1.6.8",
     "classnames": "2.3.2",
     "history": "5.3.0",
     "http-status-codes": "2.3.0",
